--- a/ProjectASP_Nhom8/Views/Home/TrangChu.cshtml
+++ b/ProjectASP_Nhom8/Views/Home/TrangChu.cshtml
@@ -29,7 +29,8 @@
                 <div class="navbar-nav py-0">
                     <a class="nav-item nav-link active" style="font-size:1.5rem" asp-controller="Home" asp-action="Trangchu">Trang Chủ</a>
                     <a class="nav-item nav-link" style="font-size:1.5rem" >Doanh Nghiệp</a>
-                    <a href="#" class="nav-item nav-link" style="font-size:1.5rem">Tham Quan</a>
+                    <a class="nav-item nav-link" style="font-size:1.5rem" asp-controller="Home" asp-action="DSChuyenThamQuanHienTai">Tham Quan</a>
+                    <a class="nav-item nav-link" style="font-size:1.5rem" asp-controller="Home" asp-action="DSDangKyTheoMaSV">Danh sách đăng ký</a>
                     <a href="#footer" class="nav-item nav-link" style="font-size:1.5rem">Liên Hệ</a>
                     @if (userRole == "Giảng Viên")
                     {
