--- a/ProjectASP_Nhom8/Views/Home/DSDangKyTheoMaSV.cshtml
+++ b/ProjectASP_Nhom8/Views/Home/DSDangKyTheoMaSV.cshtml
@@ -73,7 +73,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse" style="margin-left:-8%;">
                 <div class="navbar-nav py-0">
                     <a class="nav-item nav-link active" style="font-size:1.5rem" asp-controller="Home" asp-action="Trangchu">Trang Chủ</a>
-                    <a class="nav-item nav-link" style="font-size:1.5rem">Doanh Nghiệp</a>
+                    <a class="nav-item nav-link" style="font-size:1.5rem" asp-controller="Home" asp-action="DSDoanhNghiep">Doanh Nghiệp</a>
                     <a class="nav-item nav-link" style="font-size:1.5rem" asp-controller="Home" asp-action="DSChuyenThamQuanHienTai">Tham Quan</a>
                     <a class="nav-item nav-link" style="font-size:1.5rem" asp-controller="Home" asp-action="DSDangKyTheoMaSV">Danh sách đăng ký</a>
                     <a href="#footer" class="nav-item nav-link" style="font-size:1.5rem">Liên Hệ</a>
