--- a/ProjectASP_Nhom8/Views/Home/ThemGiangVien.cshtml
+++ b/ProjectASP_Nhom8/Views/Home/ThemGiangVien.cshtml
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Thêm SV</title>
+    <title>Thêm GV</title>
     <!-- Favicon-->
     @* <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> *@
     <!-- Bootstrap icons-->
