--- a/ProjectASP_Nhom8/Views/Home/DSDangKyTheoMaSV.cshtml
+++ b/ProjectASP_Nhom8/Views/Home/DSDangKyTheoMaSV.cshtml
@@ -72,11 +72,27 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse" style="margin-left:-8%;">
                 <div class="navbar-nav py-0">
-                    <a class="nav-item nav-link active" style="font-size:1.5rem" asp-controller="Home" asp-action="Trangchu">Trang Chủ</a>
-                    <a class="nav-item nav-link" style="font-size:1.5rem" asp-controller="Home" asp-action="DSDoanhNghiep">Doanh Nghiệp</a>
-                    <a class="nav-item nav-link" style="font-size:1.5rem" asp-controller="Home" asp-action="DSChuyenThamQuanHienTai">Tham Quan</a>
-                    <a class="nav-item nav-link" style="font-size:1.5rem" asp-controller="Home" asp-action="DSDangKyTheoMaSV">Danh sách đăng ký</a>
-                    <a href="#footer" class="nav-item nav-link" style="font-size:1.5rem">Liên Hệ</a>
+                    <a class="nav-item nav-link active" style="font-size:1rem" asp-controller="Home" asp-action="Trangchu">Trang Chủ</a>
+                    @if (userRole == "Giảng Viên" || userRole == "Sinh Viên")
+                    {
+                        <a class="nav-item nav-link" style="font-size:1rem" asp-controller="Home" asp-action="DSDoanhNghiep">Doanh Nghiệp</a>
+                    }
+
+                    @if (userRole == "Sinh Viên")
+                    {
+                        <a class="nav-item nav-link" style="font-size:1rem" asp-controller="Home" asp-action="DSChuyenThamQuanHienTai">Tham Quan</a>
+                        <a class="nav-item nav-link" style="font-size:1rem" asp-controller="Home" asp-action="DSDangKyTheoMaSV">Danh sách đăng ký</a>
+                    }
+
+                    @if (userRole == "Admin")
+                    {
+                        <a class="nav-item nav-link" style="font-size:1rem" asp-controller="Home" asp-action="DSGiangVien">Quản lý giảng viên</a>
+                        <a class="nav-item nav-link" style="font-size:1rem" asp-controller="Home" asp-action="DSSinhVien">Quản lý sinh viên</a>
+                        <a class="nav-item nav-link" style="font-size:1rem" asp-controller="Home" asp-action="DSChuyenThamQuanAdmin">Quản lý chuyến tham quan</a>
+                        <a class="nav-item nav-link" style="font-size:1rem" asp-controller="Home" asp-action="DSDoanhNghiepAdmin">Quản lý doanh nghiệp</a>
+                        <a class="nav-item nav-link" style="font-size:1rem" asp-controller="Home" asp-action="DSTaiKhoan">Quản lý tài khoản</a>
+                    }
+                    <a href="#footer" class="nav-item nav-link" style="font-size:1rem">Liên Hệ</a>
                 </div>
             </div>
             @if (userRole != null)
@@ -91,7 +107,6 @@
             {
                 <a href="" class="btn btn-primary border-secondary rounded-pill py-2 px-4 px-lg-3 mb-3 mb-md-3 mb-lg-0" asp-controller="Home" asp-action="Index">Đăng nhập</a>
             }
-
         </nav>
     </div>
     <h1 style="text-align: center; font-family: Arial, sans-serif; color: #333; margin-top:3%">Danh sách đã đăng ký</h1>
@@ -198,17 +213,7 @@
             PageClasses = new[] { "page-link" }
         })
     </div>
-    <footer id="footer">
-        <div class="contact-info">
-            <div>Phòng Tổ chức - Hành chính : 02838966825</div>
-            <div>Phòng Quản lý đào tạo : 02838970023</div>
-            <div>Phòng Kế hoạch - Tài chính : 02862820044</div>
-            <div>Phòng Công tác chính trị - Học sinh sinh viên : 02822158640</div>
-            <div>Fax: 02838962474</div>
-            <div>Website: <a href="http://tdc.edu.vn">www.tdc.edu.vn</a></div>
-            <div>Email: <a href="mailto:tdc@mail.tdc.edu.vn">tdc@mail.tdc.edu.vn</a> - <a href="mailto:tdc@tdc.edu.vn">tdc@tdc.edu.vn</a></div>
-        </div>
-    </footer>
+
     <script src="~/js/jquery.min.js"></script>
     <script src="~/js/popper.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
