--- a/ProjectASP_Nhom8/Views/Home/DSTaiKhoan.cshtml
+++ b/ProjectASP_Nhom8/Views/Home/DSTaiKhoan.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<ProjectASP_Nhom8.Models.DoanhNghiep>
-
+﻿@model IEnumerable<ProjectASP_Nhom8.Models.TaiKhoan>
+@using X.PagedList.Mvc.Core;
+@using X.PagedList;
 @{
-    ViewData["Title"] = "DSDoanhNghiepAdmin";
+    ViewData["Title"] = "DSTaiKhoan";
     var userRole = HttpContextAccessor.HttpContext.Session.GetString("UserRole");
 }
-
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -15,11 +15,11 @@
     <!-- Favicon-->
     @* <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> *@
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="~/css/style_DSSV.css" rel="stylesheet" />
 </head>
+
 <body>
     <div class="container-fluid nav-bar p-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 px-lg-5 py-3 py-lg-0">
@@ -71,65 +71,48 @@
         <div class="container px-4 px-lg-5 my-5">
             @if (TempData["ThongBaoThem"] != null)
             {
-                <div id="them" class="alert @((TempData["ThongBaoThem"].ToString().Contains("thành công")) ? "alert-success" : "alert-danger")">
+                <div id="them" class="alert alert-success">
                     @TempData["ThongBaoThem"]
                 </div>
             }
-
-            @if (TempData["ThongBaoXoa"] != null)
-            {
-                <div id="xoa" class="alert @((TempData["ThongBaoXoa"].ToString().Contains("thành công")) ? "alert-success" : "alert-danger")">
-                    @TempData["ThongBaoXoa"]
-                </div>
-            }
-
-            @if (TempData["ThongBaoSua"] != null)
-            {
-                <div id="sua" class="alert @((TempData["ThongBaoSua"].ToString().Contains("thành công")) ? "alert-success" : "alert-danger")">
-                    @TempData["ThongBaoSua"]
-                </div>
-            }
-
             <script>
                 // Ẩn thông báo sau 3 giây
                 setTimeout(function () {
                     var them = document.getElementById("them");
-                    var xoa = document.getElementById("xoa");
-                    var sua = document.getElementById("sua");
 
                     if (them) {
                         them.style.display = "none";
                     }
-                    if (xoa) {
-                        xoa.style.display = "none";
-                    }
-                    if (sua) {
-                        sua.style.display = "none";
-                    }
                 }, 3000);
             </script>
-
-
-            <h1 class="mb-5">Quản Lý Danh Sách Doanh Nghiệp</h1>
+            <h1 class="mb-5">Danh sách tài khoản</h1>
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="table-wrapper">
                     <div class="table-title">
-                        <a class="btn btn-success" data-toggle="modal" asp-action="ThemDoanhNghiep">
-                            <i class="bi bi-pencil"></i><span> Thêm Mới</span>
-                        </a>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h2>Quản Lý <b>Tài Khoản</b></h2>
+                            </div>
+                            <div class="col-sm-6 d-flex justify-content-end">
+                                <a class="btn btn-success" data-toggle="modal" asp-action="ThemTaiKhoan">
+                                    <i class="bi bi-pencil"></i><span> Thêm tài khoản</span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <table class="table table-striped table-hover">
+                    <table class="table">
                         <thead>
                             <tr>
                                 <th>
-                                    <center>@Html.DisplayNameFor(model => model.MaDn)</center>
+                                    @Html.DisplayNameFor(model => model.TaiKhoan1)
                                 </th>
                                 <th>
-                                    <center>@Html.DisplayNameFor(model => model.TenDn)</center>
+                                    @Html.DisplayNameFor(model => model.MatKhau)
                                 </th>
                                 <th>
-                                    <center> @Html.DisplayNameFor(model => model.DiaChi)</center>
+                                    @Html.DisplayNameFor(model => model.Quyen)
                                 </th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -137,38 +120,35 @@
                             {
                                 <tr>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.MaDn)
+                                        @Html.DisplayFor(modelItem => item.TaiKhoan1)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.TenDn)
+                                        @Html.DisplayFor(modelItem => item.MatKhau)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.DiaChi)
+                                        @Html.DisplayFor(modelItem => item.Quyen)
                                     </td>
-                                    <td>
-                                        <span class="action-icons">
-                                            <a class="edit" data-toggle="modal" asp-action="CapNhatDoanhNghiep" asp-route-maDn="@item.MaDn">
-                                                <i class="bi bi-pencil"></i>
-                                            </a>
-
-                                            <a class="delete" data-toggle="modal" asp-action="XoaDoanhNghiep" asp-route-maDn="@item.MaDn" onclick="return confirm('Bạn có muốn xóa?')">
-                                                <i class="bi bi-trash"></i>
-                                            </a>
-                                        </span>
-                                    </td>
+                                    @* <td>
+                                <a asp-action="Edit" asp-route-id="@item.TaiKhoan1">Edit</a> |
+                                <a asp-action="Details" asp-route-id="@item.TaiKhoan1">Details</a> |
+                                <a asp-action="Delete" asp-route-id="@item.TaiKhoan1">Delete</a>
+                                </td> *@
                                 </tr>
                             }
                         </tbody>
                     </table>
+
+                    @Html.PagedListPager((IPagedList)Model, page => Url.Action("DSTaiKhoan",
+                    new {page = page}),
+                    new X.PagedList.Mvc.Core.PagedListRenderOptions
+                    {
+                    ContainerDivClasses = new[] {"navigation"},
+                    LiElementClasses = new[] {"page-item"},
+                    PageClasses = new[] {"page-link"}
+                    })
                 </div>
             </div>
         </div>
     </section>
 </body>
-<style>
-    .action-icons {
-        display: flex;
-        gap: 10px; /* Adjust space between icons if necessary */
-    }
-
-</style>
+</html>
