--- a/ProjectASP_Nhom8/Views/Home/SuaChuyenThamQuan.cshtml
+++ b/ProjectASP_Nhom8/Views/Home/SuaChuyenThamQuan.cshtml
@@ -21,7 +21,7 @@
 
 <body>
     <div class="container">
-        <h1>Cập nhật thông tin giảng viên</h1>
+        <h1>Cập nhật thông tin chuyến tham quan</h1>
 
         <hr />
         <div class="row">
